--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -33,7 +33,8 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_drawing_l"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                tools:ignore="ContentDescription" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -49,113 +50,129 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/details_place"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginVertical="7dp"
-                card_view:cardBackgroundColor="@color/cardview_light_background"
-                card_view:cardCornerRadius="5dp"
-                card_view:cardElevation="@dimen/cardview_default_elevation">
-                <!-- can't use padding here, as 1px <View> that serves as
-                    horizontalSeparator is left-to-right, still this is the way to go.
-                    Do not declare <View> at bottom with an anchor -->
+                android:background="@color/orange"
+                android:padding="14dp"
+                android:visibility="visible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                <TextView
+                    android:id="@+id/details_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="@sample/restaurants.json/data/name" />
 
-                    <TextView
-                        android:id="@+id/sn_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="15dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginBottom="5dp"
-                        tools:text="@tools:sample/first_names" />
+                <RatingBar
+                    android:id="@+id/details_likes"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/list_item_margin"
+                    android:isIndicator="true"
+                    android:numStars="3"
+                    android:rating="3"
+                    android:stepSize="1"
+                    android:theme="@style/RatingBar"
+                    app:layout_constraintBottom_toBottomOf="@id/details_name"
+                    app:layout_constraintStart_toEndOf="@id/details_name"
+                    tools:rating="@sample/restaurants.json/data/stars" />
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/grey" />
+                <TextView
+                    android:id="@+id/details_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp"
+                    android:textColor="@color/white"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/details_name"
+                    tools:text="@sample/restaurants.json/data/address" />
 
-                    <TextView
-                        android:id="@+id/address"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="15dp"
-                        android:layout_marginVertical="15dp"
-                        card_view:drawableStartCompat="@drawable/ic_drawing_l"
-                        tools:text="@tools:sample/cities" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    <TextView
-                        android:id="@+id/telephone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
-                        card_view:drawableStartCompat="@drawable/ic_drawing_l"
-                        tools:text="@tools:sample/us_phones" />
-
-                    <TextView
-                        android:id="@+id/link"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
-                        card_view:drawableStartCompat="@drawable/ic_drawing_l"
-                        tools:text="@tools:sample/full_names" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/details_menu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                card_view:cardBackgroundColor="@color/cardview_light_background"
-                card_view:cardCornerRadius="5dp"
-                card_view:cardElevation="@dimen/cardview_default_elevation"
-                card_view:cardUseCompatPadding="true">
+                android:background="?attr/colorPrimary"
+                android:visibility="visible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/details_place">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                <TextView
+                    android:id="@+id/details_call"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="12dp"
+                    android:gravity="center"
+                    android:padding="18dp"
+                    android:text="@string/call"
+                    android:textColor="?attr/colorOnPrimary"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:drawableTint="@color/orange"
+                    app:drawableTopCompat="@drawable/ic_baseline_call_24"
+                    app:layout_constraintEnd_toStartOf="@id/details_like"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/description"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="15dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginBottom="5dp"
-                        android:text="@string/app_name" />
+                <TextView
+                    android:id="@+id/details_like"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="12dp"
+                    android:gravity="center"
+                    android:padding="18dp"
+                    android:text="@string/like"
+                    android:textColor="?attr/colorOnPrimary"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:drawableTint="@color/orange"
+                    app:drawableTopCompat="@drawable/ic_baseline_star_rate_24"
+                    app:layout_constraintEnd_toStartOf="@id/details_website"
+                    app:layout_constraintStart_toEndOf="@id/details_call"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/grey" />
+                <TextView
+                    android:id="@+id/details_website"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="12dp"
+                    android:gravity="center"
+                    android:padding="18dp"
+                    android:text="@string/website"
+                    android:textColor="?attr/colorOnPrimary"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:drawableTint="@color/orange"
+                    app:drawableTopCompat="@drawable/ic_baseline_public_24"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/details_like"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/apropos"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="15dp"
-                        android:layout_marginVertical="15dp"
-                        tools:text="@tools:sample/lorem" />
 
-                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/details_menu" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.core.widget.NestedScrollView>
 
@@ -164,10 +181,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:contentDescription="@string/going_at_noon"
         app:backgroundTint="?attr/colorBackgroundFloating"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_baseline_add_location_alt_24"
+        app:srcCompat="@drawable/ic_baseline_check_circle_24"
         app:tint="?attr/colorButtonNormal" />
     <!-- remark: we can write app:tint="@null" -->
 
