--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,52 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorSurface">
+    android:paddingHorizontal="30dp"
+    android:theme="@style/Theme.Go4Lunch.settings">
 
     <TextView
         android:id="@+id/landing_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="50dp"
+        android:layout_height="200dp"
+        android:gravity="center"
         android:text="@string/app_name"
-        android:textColor="?attr/colorOnSurface"
         android:textSize="48sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/landing_permissions_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/permissions_button"
-        app:layout_constraintBottom_toTopOf="@id/landing_login_text"
+        android:textColor="@color/colorSurface"
+        app:layout_constraintBottom_toTopOf="@id/landing_login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/landing_title" />
+
+    <TextView
+        android:id="@+id/landing_permissions_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/permissions_text"
+        android:textAlignment="center"
+        android:textColor="?attr/colorOnSurface"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/landing_permissions_button" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/landing_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/login_button"
+        android:textColor="@color/colorSurface"
+        app:layout_constraintBottom_toTopOf="@id/landing_soup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/landing_permissions_button" />
 
     <TextView
         android:id="@+id/landing_login_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_text"
-        android:textColor="?attr/colorOnSurface"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/landing_login_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/landing_login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login_button"
-        app:layout_constraintBottom_toTopOf="@id/landing_soup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/landing_permissions_button" />
+        app:layout_constraintTop_toBottomOf="@id/landing_login_button" />
 
     <ImageView
         android:id="@+id/landing_soup"
