--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,4 +36,10 @@
         <item name="colorControlNormal">@color/grey</item>
         <item name="colorControlActivated">@color/gold</item>
     </style>
+
+    <style name="Theme.Go4Lunch.settings" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:background">@color/colorSurface</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:colorButtonNormal">@color/white</item>
+    </style>
 </resources>
