--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->c
+
     <style name="Theme.Go4Lunch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -37,9 +38,14 @@
         <item name="colorControlActivated">@color/gold</item>
     </style>
 
-    <style name="Theme.Go4Lunch.settings" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Go4Lunch.titleBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorControlNormal">@color/white</item>
+    </style>
+
+    <style name="Theme.Go4Lunch.preferences" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:statusBarColor" tools:targetApi="l">@color/androidStatusBarColor</item>
         <item name="android:background">@color/colorSurface</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:colorButtonNormal">@color/white</item>
     </style>
+
 </resources>
