--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:toolbarId="@+id/colapsing_toolbar">
+            app:toolbarId="@+id/collapsing_toolbar">
             <!-- app:layout_scrollInterpolator="@android:anim/decelerate_interpolator" -->
 
             <ImageView
