--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -15,32 +15,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:contentDescription="@string/content_loading"
+        app:fabSize="mini"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/update_poi_pins"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginEnd="5dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="30dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/center_on_me"
         android:scaleType="fitXY"
         android:src="@drawable/ic_baseline_add_location_alt_24"
-        app:backgroundTint="?attr/colorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:tint="?attr/colorOnSecondary" />
 
-    <ImageButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/center_on_me"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginEnd="5dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="30dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/center_on_me"
         android:scaleType="fitXY"
         android:src="@drawable/ic_baseline_my_location_24"
-        app:backgroundTint="?attr/colorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/update_poi_pins"
         app:tint="?attr/colorOnSecondary" />
