--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -62,53 +62,57 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/details_place"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:background="@color/orange"
-                android:padding="14dp"
-                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="@id/details_address"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:padding="14dp"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/details_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="@sample/restaurants.json/data/name" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/details_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="14dp"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@sample/restaurants.json/data/name" />
 
-                <androidx.appcompat.widget.AppCompatRatingBar
-                    android:id="@+id/details_likes"
-                    style="?android:attr/ratingBarStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/list_item_margin"
-                    android:isIndicator="true"
-                    android:numStars="3"
-                    android:rating="3"
-                    android:stepSize="1"
-                    android:theme="@style/RatingBar"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="@id/details_name"
-                    app:layout_constraintStart_toEndOf="@id/details_name"
-                    tools:rating="@sample/restaurants.json/data/stars" />
+            <androidx.appcompat.widget.AppCompatRatingBar
+                android:id="@+id/details_likes"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_marginStart="14dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/list_item_margin"
+                android:isIndicator="true"
+                android:layout_marginEnd="14dp"
+                android:numStars="3"
+                android:rating="3"
+                android:stepSize="1"
+                android:theme="@style/RatingBar"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="@id/details_name"
+                app:layout_constraintBottom_toBottomOf="@id/details_name"
+                app:layout_constraintStart_toEndOf="@id/details_name"
+                tools:rating="@sample/restaurants.json/data/stars"
+                tools:visibility="visible" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/details_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="7dp"
-                    android:textColor="@color/white"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/details_name"
-                    tools:text="@sample/restaurants.json/data/address" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/details_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/details_name"
+                tools:text="@sample/restaurants.json/data/address" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/details_menu"
@@ -118,7 +122,7 @@
                 android:elevation="7dp"
                 android:visibility="visible"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/details_place">
+                app:layout_constraintTop_toBottomOf="@id/details_address">
 
                 <!--
                 bottomNavBar is no perfect fit: DO NOT force it in.
